--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </nav>
 
             <section id="hero">
-                <div class="container123">
+                <div class="container">
 
                 </div>
 
