--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
     <header>
         <div class="heder-container">
-
             <nav>
                 <ul>
                     <li>
@@ -45,17 +44,19 @@
                 </ul>
             </nav>
 
-            <section id="hero">
-                <div class="container">
-                    
-                </div>
-
-            </section>
-
-
 
         </div>
     </header>
+
+    <section id="hero">
+        <div class="container">
+            <!-- <h2>Good Time, Great Taste
+            </h2> -->
+        </div>
+
+    </section>
+
+
 
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
