--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 
     <section id="hero">
         <div class="container">
+            <div class="heder-detail">
             <!-- <h2>Good Time, Great Taste
             </h2> -->
+
+            </div>
         </div>
 
     </section>
