--- a/index.html
+++ b/index.html
@@ -17,47 +17,48 @@
 <body>
     <header>
         <div class="heder-container">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">ABOUT <i class="fa-solid fa-angle-down"></i></a>
-                    </li>
-                    <li>
-                        <a href="#">OWER MENU <i class="fa-solid fa-angle-down"></i></a>
-                    </li>
-                    <li>
-                        <a href="#">MEGAMENU <i class="fa-solid fa-angle-down"></i></a>
-                    </li>
+            <div class="abc">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">ABOUT <i class="fa-solid fa-angle-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">OWER MENU <i class="fa-solid fa-angle-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">MEGAMENU <i class="fa-solid fa-angle-down"></i></a>
+                        </li>
 
-                </ul>
-            </nav>
-            <img src="assets/img/LOGO BURGER.png" alt="">
+                    </ul>
+                </nav>
+                <img src="assets/img/LOGO BURGER.png" alt="">
 
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">SHOP <i class="fa-solid fa-angle-down"></i></a>
-                    </li>
-                    <li> <a href="#">BLOG <i class="fa-solid fa-angle-down"></i></a> </li>
-                    <li> <a href="#">CONTECT <i class="fa-solid fa-angle-down"></i></a> </li>
-                    </li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">SHOP <i class="fa-solid fa-angle-down"></i></a>
+                        </li>
+                        <li> <a href="#">BLOG <i class="fa-solid fa-angle-down"></i></a> </li>
+                        <li> <a href="#">CONTECT <i class="fa-solid fa-angle-down"></i></a> </li>
+                        </li>
+                    </ul>
+                </nav>
 
-
+            <!-- </div> -->
         </div>
     </header>
 
-    <section id="hero">
+     <section id="hero">
         <div class="container">
             <div class="heder-detail">
-            <!-- <h2>Good Time, Great Taste
-            </h2> -->
+            <h2>Good Time, Great Taste
+            </h2>
 
-            </div>
-        </div>
+    </div>
+    </div>
 
-    </section>
+    </section> 
 
 
 
