--- a/index.html
+++ b/index.html
@@ -45,20 +45,24 @@
                     </ul>
                 </nav>
 
-            <!-- </div> -->
+            </div>
         </div>
     </header>
 
-     <section id="hero">
+    <section id="hero">
         <div class="container">
             <div class="heder-detail">
-            <h2>Good Time, Great Taste
+                <h2>Good Time,
+                     Great Taste
             </h2>
+            <p>Open Daily: 11:30PM - 8:30PM
 
-    </div>
-    </div>
+            </p>
 
-    </section> 
+            </div>
+        </div>
+
+    </section>
 
 
 
