--- a/index.html
+++ b/index.html
@@ -49,15 +49,24 @@
         </div>
     </header>
 
+    <main>
     <section id="hero">
         <div class="container">
             <div class="heder-detail">
                 <h2>Good Time,
                      Great Taste
             </h2>
-            <p>Open Daily: 11:30PM - 8:30PM
+            <p>Open Daily: <span>11:30PM - 8:30PM</span></p>
 
-            </p>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="about">
+        <div class="container">
+            <div class="img">
+                <img src="assets/img/about img.png" alt="">
 
             </div>
         </div>
@@ -65,8 +74,7 @@
     </section>
 
 
-
-
+</main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
