--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section id="burger-fries">
             <div class="container">
                 <div class="row bgdata">
-                    <div class="col-5 chees-fries">
+                    <div class="col-6 chees-fries">
                         <div class="chees-fries-data">
                             <h2>Get Your Free</h2>
                             <h3>Cheese Fries</h3>
@@ -133,7 +133,7 @@
                         <div class="burger-back-data">
                             <h2>Crispy Chicken</h2>
                             <h1>Burger Is Back!</h1>
-                            <button class="common-btn1">
+                            <button class="common-btn">
                                 LEARN MORE
                             </button>
 
@@ -142,6 +142,7 @@
                 </div>
             </div>
         </section>
+        
 
     </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
