--- a/index.html
+++ b/index.html
@@ -142,7 +142,93 @@
                 </div>
             </div>
         </section>
-        
+
+        <section id="menu">
+            <div class="container">
+                <h2>Explore Our Menu</h2>
+                <p>Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus, blandit a
+                    cursus varius magna</p>
+                <div class="row">
+                    <div class="col-12 menu-data">
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu1.jpg" alt="">
+                            <div class="menu-star">
+                                <i class="fa-regular fa-star"></i><samp><i class="fa-regular fa-heart"></i></samp> 
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu2.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>  <span><i class="fa-regular fa-heart"></i></span>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu3.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="col-3 menu-detail"> 
+                            <img src="assets/img/menu4.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+
+                    <div class="col-12 menu-data">
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu1.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu2.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu3.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu4.jpg" alt="">
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
 
     </main>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
