--- a/index.html
+++ b/index.html
@@ -146,84 +146,154 @@
         <section id="menu">
             <div class="container">
                 <h2>Explore Our Menu</h2>
-                <p>Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus, blandit a
+                <p class="abc">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus,
+                    blandit a
                     cursus varius magna</p>
-                <div class="row">
+                <div class="row burgur-menu">
                     <div class="col-12 menu-data">
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu1.jpg" alt="">
                             <div class="menu-star">
-                                <i class="fa-regular fa-star"></i><samp><i class="fa-regular fa-heart"></i></samp> 
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i><span><i
+                                        class="fa-regular fa-heart"></i></span>
+
+                                <h3>Crispy Chicken</h3>
+                                <p class="cilli">Chicken breast, chilli sauce, tomatoes, pickles, coleslaw</p>
+                                <div class="money"> $8.50</div>
                             </div>
                         </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu2.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>  <span><i class="fa-regular fa-heart"></i></span>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <span><i class="fa-regular fa-heart"></i></span>
+                                <h3>Ultimate Bacon</h3>
+                                <p class="cilli">House beef patty, cheddar cheese, bacon, onion, mustard
+
+                                </p>
+                                <div class="money"> $9.99
+                                </div>
+                            </div>
                         </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu3.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </div>
-                        <div class="col-3 menu-detail"> 
-                            <img src="assets/img/menu4.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                        </div>
-                    </div>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <span><i class="fa-regular fa-heart"></i></span>
+                                <h3>Black Sheep</h3>
+                                <p class="cilli">American cheese, tomato relish, avocado, lettuce, red onion
 
-                    <div class="col-12 menu-data">
+                                </p>
+                                <div class="money"> $9.75
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 menu-detail">
+                            <img src="assets/img/menu4.jpg" alt="">
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i> <span><i
+                                        class="fa-regular fa-heart"></i></span>
+                                <h3>Double Burger</h3>
+                                <p class="cilli">2 beef patties, cheddar cheese, mustard, pickles, tomatoes
+
+                                </p>
+                                <div class="money"> $10.35
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu1.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i> <span><i
+                                        class="fa-regular fa-heart"></i></span>
+                                <h3>Turkey Burger
+                                </h3>
+                                <p class="cilli">Turkey, cheddar cheese, onion, lettuce, tomatoes, pickles
+
+                                </p>
+                                <div class="money"> $8.95
+                                </div>
+
+                            </div>
                         </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu2.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i> <span><i class="fa-regular fa-heart"></i></span>
+                                <h3>Smokey House
+                                </h3>
+                                <p class="cilli">Beef patty, cheddar cheese, onion, lettuce, tomatoes, pickles
+
+                                </p>
+                                <div class="money">$9.50
+                                </div>
+
+                            </div>
                         </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu3.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i> <span><i class="fa-regular fa-heart"></i></span>
+                                <h3>Classic Burger
+                                </h3>
+                                <p class="cilli">Beef, cheddar cheese, ketchup, mustard, pickles, onion
+
+                                </p>
+                                <div class="money">$7.95
+                                </div>
+
+                            </div>
                         </div>
                         <div class="col-3 menu-detail">
                             <img src="assets/img/menu4.jpg" alt="">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <div class="menu-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i> <span><i class="fa-regular fa-heart"></i></span>
+                                <h3>Vegan Burger
+                                </h3>
+                                <p class="cilli">Mushroom patty, vegan cheese, lettuce, tomatoes, avocado
+
+                                </p>
+                                <div class="money">$8.95
+                                </div>
+
+                            </div>
+
+
+
+
                         </div>
-
                     </div>
-
-                </div>
-            </div>
         </section>
 
 
