--- a/index.html
+++ b/index.html
@@ -146,15 +146,19 @@
         <section id="menu">
             <div class="container">
                 <h2>Explore Our Menu</h2>
-                <p class="abc">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus,
+                <p class="sub-title">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus,
                     blandit a
                     cursus varius magna</p>
+
+
                 <div class="row burgur-menu">
                     <div class="col-3 menu-detail">
                         <div class="menus-data">
                             <div class="imges-data">
                                 <img src="assets/img/menu1.jpg" alt="">
+                                <span>Code: 0850</span>
                             </div>
+
                             <div class="menu-star">
 
                                 <i class="fa-solid fa-star"></i>
@@ -177,6 +181,7 @@
                         <div class="menus-data">
                             <div class="imges-data">
                                 <img src="assets/img/menu2.jpg" alt="">
+                                <span>Code: 0858</span>
                             </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
@@ -196,6 +201,7 @@
                         <div class="menus-data">
                             <div class="imges-data">
                                 <img src="assets/img/menu3.jpg" alt="">
+                                <span>Code: 0847</span>
                             </div>
                             <div class="menu-star">
 
@@ -219,6 +225,7 @@
                             <div class="imges-data">
 
                                 <img src="assets/img/menu4.jpg" alt="">
+                                <span>Code: 0859</span>
                             </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
@@ -240,6 +247,7 @@
                         <div class="menus-data">
                             <div class="imges-data">
                                 <img src="assets/img/menu1.jpg" alt="">
+                                <span>Code: 0861</span>
                             </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
@@ -261,6 +269,7 @@
 
                             <div class="imges-data">
                                 <img src="assets/img/menu2.jpg" alt="">
+                                <span>Code: 0840</span>
                             </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
@@ -281,6 +290,7 @@
                         <div class="menus-data">
                             <div class="imges-data">
                                 <img src="assets/img/menu3.jpg" alt="">
+                                <span>Code: 0862</span>
                             </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
@@ -299,7 +309,9 @@
                     </div>
                     <div class="col-3 menu-detail">
                         <div class="menus-data">
-                            <div class="imges-data"> <img src="assets/img/menu4.jpg" alt=""></div>
+                            <div class="imges-data"> <img src="assets/img/menu4.jpg" alt="">
+                                <span>Code: 0844</span>
+                            </div>
                             <div class="menu-star">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
