--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
         <section id="menu">
             <div class="container">
                 <h2>Explore Our Menu</h2>
-                <p class="sub-title">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero tempus,
+                <p class="sub-title">Aliquam a augue suscipit, luctus neque purus ipsum neque undo dolor primis libero
+                    tempus,
                     blandit a
                     cursus varius magna</p>
 
@@ -188,6 +189,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
                                 <a href="#"><i class="fa-regular fa-heart"></i></a>
                             </div>
                             <div class="money-data">
@@ -335,6 +337,11 @@
         </section>
 
 
+        <section id="the-county">
+            <div class="container">
+
+            </div>
+        </section>
 
 
 
