--- a/index.html
+++ b/index.html
@@ -339,7 +339,32 @@
 
         <section id="the-county">
             <div class="container">
+                <div class="row the-county-data">
+                    <div class="col-4 county-data">
+                        <h3>The</h3>
+                        <h2>County General</h2>
+                        <p>Semper lacus cursus porta a primis feugiat ligula risus auctor rhoncus semper undo</p>
+                        <button class="common-btns">ORDER NOW</button>
+                    </div>
+                    <div class="col-7 burgers-data">
+                        <div class="burgers-img">
+                            <img src="assets/img/backimg.png" alt="">
+                            <div class="red-circle">
+                                <div class="circle-data">
+<h2>Only</h2>
+<h3>$9.99</h3>
+<p>Code: 0841</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-2">
+                        <div class="box-burger">
+                            <img src="assets/img/rburger.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
