--- a/index.html
+++ b/index.html
@@ -346,24 +346,36 @@
                         <p>Semper lacus cursus porta a primis feugiat ligula risus auctor rhoncus semper undo</p>
                         <button class="common-btns">ORDER NOW</button>
                     </div>
-                    <div class="col-7 burgers-data">
-                        <div class="burgers-img">
-                            <img src="assets/img/backimg.png" alt="">
-                            <div class="red-circle">
-                                <div class="circle-data">
-                                    <h2>Only</h2>
-                                    <h3>$9.99</h3>
-                                    <p>Code: 0841</p>
+                    <div class="col-8 burgers-data">
+                        <div class="row">
+                            <div class="col-10">
+                                <div class="burgers-img">
+                                    <img src="assets/img/backimg.png" alt="">
+                                    <div class="red-circle">
+                                        <div class="circle-data">
+                                            <h2>Only</h2>
+                                            <h3>$9.99</h3>
+                                            <p>Code: 0841</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="col-2">
+                                <div class="box-burger">
+                                    <img src="assets/img/rburger.png" alt="">
+                                    <h2>ultimate becon burger</h2>
+                                </div>
+                                <div class="box-burger">
+                                    <img src="assets/img/burger5.png" alt="">
+                                    <h2>grilled chicken burger</h2>
+                                </div>
+                            </div>
+
                         </div>
+
                     </div>
 
-                    <div class="col-2">
-                        <div class="box-burger">
-                            <img src="assets/img/rburger.png" alt="">
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </section>
