--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     </div>
                     <div class="col-8 burgers-data">
                         <div class="row">
-                            <div class="col-10">
+                            <div class="col-8">
                                 <div class="burgers-img">
                                     <img src="assets/img/backimg.png" alt="">
                                     <div class="red-circle">
@@ -360,7 +360,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-2">
+                            <div class="col-3">
                                 <div class="box-burger">
                                     <img src="assets/img/rburger.png" alt="">
                                     <h2>ultimate becon burger</h2>
@@ -379,6 +379,13 @@
                 </div>
             </div>
         </section>
+
+        <section id="salad">
+            <div class="container">
+
+            </div>
+        </section>
+
 
 
 
